# unstructured-mcp-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/unstructured_mcp/: __init__.py  chunker.py  partitioner.py  server.py  utils.py
tests/: test_chunk.py  test_partition.py  test_tables.py
