[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unstructured-mcp-server"
version = "0.1.0"
description = "MCP server for document processing with Unstructured.io"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rezzed AI", email = "hello@rezzed.ai" },
]
keywords = ["mcp", "unstructured", "document-processing", "pdf", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "mcp>=1.0.0",
    "unstructured[all-docs]>=0.16.0",
    "unstructured-client>=0.28.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/rezzedai/unstructured-mcp-server"
Repository = "https://github.com/rezzedai/unstructured-mcp-server"
Issues = "https://github.com/rezzedai/unstructured-mcp-server/issues"

[project.scripts]
unstructured-mcp-server = "unstructured_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unstructured_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
